--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Assignment portal for Eleanor Barnum in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <title>Assignment Portal</title>
+    <link rel = "stylesheet" href = "styles/style.css">
 </head>
 <body>
-    <h1>My New Page</h1>
+    <section class = "heading-section">
+        <img src="images/sec_pic.jpg" alt = "Photo of Eleanor">
+        <h1 class = "name">Eleanor Barnum</h1>
+    </section>
+    
+    <section class = "link-section">
+        <h2 class = "title"> WDD 230: Assignment Portal</h2>
+        <hr>
+        <ul class = "links">
+            <li>Lesson 02: <a href="https://www.google.com" target="_blank">Title</a></li>
+            <li>Lesson 03: <a href="https://www.google.com" target="_blank">Title</a></li>
+            <li>Lesson 04: <a href="https://www.google.com" target="_blank">Title</a></li>
+            <li>Lesson 05: <a href="https://www.google.com" target="_blank">Title</a></li>
+            <li>Lesson 06: <a href="https://www.google.com" target="_blank">Title</a></li>
+            <li>Lesson 07: <a href="https://www.google.com" target="_blank">Title</a></li>
+            <li>Lesson 08: <a href="https://www.google.com" target="_blank">Title</a></li>
+            <li>Lesson 09: <a href="https://www.google.com" target="_blank">Title</a></li>
+            <li>Lesson 10: <a href="https://www.google.com" target="_blank">Title</a></li>
+            <li>Lesson 11: <a href="https://www.google.com" target="_blank">Title</a></li>
+        </ul>
+        <hr>
+    </section>
+<footer>
+    <section class = "footer-section">
+        <div class = "one"></div>
+        <div class = "two"></div>
+        
+
+    </section>
+</footer>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
