--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Assignment portal for Eleanor Barnum in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>Assignment Portal</title>
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel = "stylesheet" href = "styles/small.css">
+    <link rel = "stylesheet" href = "styles/medium.css">
     <link rel = "stylesheet" href = "styles/style.css">
 </head>
 <body>
     <section class = "heading-section">
-        <img src="images/sec_pic.jpg" alt = "Photo of Eleanor">
+        <img src="images/sec_pic.jpg" alt = "Photo of Eleanor with a skeleton">
         <h1 class = "name">Eleanor Barnum</h1>
     </section>
     
