--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <hr>
         <ul class = "links">
             <li>Lesson 02: <a href="./week2/index.html" target="_blank">Design Principles Document</a></li>
-            <li>Lesson 03: <a href="https://www.google.com" target="_blank">Title</a></li>
+            <li>Lesson 03: <a href="./week3/index.html" target="_blank">Website Planning Document</a></li>
             <li>Lesson 04: <a href="https://www.google.com" target="_blank">Title</a></li>
             <li>Lesson 05: <a href="https://www.google.com" target="_blank">Title</a></li>
             <li>Lesson 06: <a href="https://www.google.com" target="_blank">Title</a></li>
