--- a/week3/index.html
+++ b/week3/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Website planning document for Eleanor Barnum in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel = "stylesheet" href = "styles/styles.css">
     <title>Midlothian Chamber of Commerce</title>
 </head>
