--- a/week4/index.html
+++ b/week4/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="images/logo.jpg">
+        <img id="logo" src="images/logo.jpg" alt="logo image">
         <section class="headings">
             <h1>Midlothian</h1>
             <h2>Commerce Center</h2>
@@ -47,12 +47,11 @@
             <section class="join">Join</section>
             <section class="event">Event</section>
             <section class="weather">Weather</section>
-
-        </div>
+        </section>
     </main>
 
     <footer>
-        <img id="logo2" src="images/logo.jpg">
+        <img id="logo2" src="images/logo.jpg" alt="logo image">
         <section class="footings1">
             <h2 id="MCC">Midlothian Commerce Center</h2>
             <p id="addy">2221 Swamp Fox Rd<br> Midlothia, VA 23112</p>
