--- a/week4/index.html
+++ b/week4/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Chamber home page for Eleanor Barnum in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Chamber Home Page</title>
 </head>
@@ -19,10 +19,10 @@
         <nav>
             <button id="btn">&#9776;</button>
             <ul id= "navigation">
-                <li><a href="Home">Home</a></li>
-                <li><a href="Directory">Directory</a></li>
-                <li><a href="Join">Join</a></li>
-                <li><a href="Contact">Contact</a></li>
+                <li><a href="https.google.com">Home</a></li>
+                <li><a href="https.google.com">Directory</a></li>
+                <li><a href="https.google.com">Join</a></li>
+                <li><a href="https.google.com">Contact</a></li>
             </ul>
         </nav>
         <section class="links">
