--- a/week4/index.html
+++ b/week4/index.html
@@ -19,10 +19,10 @@
         <nav>
             <button id="btn">&#9776;</button>
             <ul id= "navigation">
-                <li><a href="https.google.com">Home</a></li>
-                <li><a href="https.google.com">Directory</a></li>
-                <li><a href="https.google.com">Join</a></li>
-                <li><a href="https.google.com">Contact</a></li>
+                <li><a href="https://www.google.com">Home</a></li>
+                <li><a href="https://www.google.com">Directory</a></li>
+                <li><a href="https://www.google.com">Join</a></li>
+                <li><a href="https://www.google.com">Contact</a></li>
             </ul>
         </nav>
         <section class="links">
@@ -59,7 +59,7 @@
         <section class="footings2">
             <p id="name">barnum.eleanor@gmail.com</p>
             <p id="number">(804)239-8531</p>
-            <a id="linko" href="https://google.com/">Location Map</a>
+            <a id="linko" href="https://www.google.com/">Location Map</a>
         </section>
         <hr>
         <section id="last">
