--- a/week4/index.html
+++ b/week4/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Chamber home page for Eleanor Barnum in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="shortcut icon" href="images/favicon.ico">
     <title>Chamber Home Page</title>
 </head>
 <body>
