--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li>Lesson 02: <a href="./week2/index.html" target="_blank">Design Principles Document</a></li>
             <li>Lesson 03: <a href="./week3/index.html" target="_blank">Website Planning Document</a></li>
             <li>Lesson 04: <a href="./week4/index.html" target="_blank">Chamber Home Page</a></li>
-            <li>Lesson 05: <a href="https://www.google.com" target="_blank">Title</a></li>
+            <li>Lesson 05: <a href="./week4/index.html" target="_blank">Chamber Home Page Continued</a></li>
             <li>Lesson 06: <a href="https://www.google.com" target="_blank">Title</a></li>
             <li>Lesson 07: <a href="https://www.google.com" target="_blank">Title</a></li>
             <li>Lesson 08: <a href="https://www.google.com" target="_blank">Title</a></li>
