--- a/week4/index.html
+++ b/week4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Chamber home page for Eleanor Barnum in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <meta name="description" content="Chamber home page (continued) for Eleanor Barnum in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -66,21 +66,21 @@
             <div class="parent">
                 <section class="spot1">
                     <h3 id="section-header">Business of Accounting</h3>
-                    <img id="placeholder" src="images/placeholder.jpg">
+                    <img id="placeholder" src="images/placeholder.jpg" alt="placeholder">
                     <h4 id="spotlight-head">"We'll count your numbers!</h4>
                     <hr id="section-hr">
                     <p id="section-text">businessofAcc@gmail.com <br> (804)-555-5555</p>
                 </section>
                 <section class="spot2">
                     <h3 id="section-header">Code Ninjas</h3>
-                    <img id="placeholder" src="images/placeholder.jpg">
+                    <img id="placeholder" src="images/placeholder.jpg"alt="placeholder">
                     <h4 id="spotlight-head">Teach your children how to code!</h4>
                     <hr id="section-hr">
                     <p id="section-text">codeninjas@gmail.com <br> (804)-555-5555</p>
                 </section>
                 <section class="spot3">
                     <h3 id="section-header">Chick-Fil-A</h3>
-                    <img id="placeholder" src="images/placeholder.jpg">
+                    <img id="placeholder" src="images/placeholder.jpg"alt="placeholder">
                     <h4 id="spotlight-head">Fry Chicken with us!</h4>
                     <hr id="section-hr">
                     <p id="section-text">Chick-Fil-A@gmail.com <br> (804)-555-5555</p>
@@ -92,12 +92,12 @@
             </div>
             <div class="event">
                 <h3 id="section-header">Hire Event</h3>
-                <img id="placeholder" src="images/placeholder.jpg">
+                <img id="placeholder" src="images/placeholder.jpg"alt="placeholder">
                 <p id="section-text">Join us for our weekly hiring event! Starts at 1:00 p.m every Friday afternoon.</p>
             </div>
             <div class="weather">
                 <h3 id="section-header">Weather</h3>
-                <img id="placeholder" src="images/placeholder.jpg">
+                <img id="placeholder" src="images/placeholder.jpg"alt="placeholder">
                 <hr id="section-hr">
                 <p id="weather-p1">Wind Speed: <br> Wind Chill: </p>
                 <p id="weather-p2">2.5km/h <br> N/A </p>
