home page adjustments

--- a/week4/index.html
+++ b/week4/index.html
@@ -56,9 +56,9 @@
         <div class="grid-container">
             <div class="hero">
                 <picture>
-                    <source srcset="images/hero-imageMEDIUM2.jpg" media="(min-width:450px) and (max-width:863px)">
-                    <source srcset="images/hero-imageLARGE2.jpg" media="(min-width:864px) and (max-width:2000px)">
-                    <img id="hero-img" src="images/hero-imageSMALL2.jpg" alt="Picture of Midlothian">
+                    <source srcset="images/hero-imageMEDIUM.jpg" media="(min-width:450px) and (max-width:863px)">
+                    <source srcset="images/hero-imageLARGE.jpg" media="(min-width:864px) and (max-width:2000px)">
+                    <img id="hero-img" src="images/hero-imageSMALL.jpg" alt="Picture of Midlothian">
 
                 </picture>
                 <section class="title"><h1>Welcome to Midlothian!</h1></section>
@@ -71,21 +71,21 @@
             <div class="parent">
                 <section class="spot1">
                     <h3 class="section-header">Business of Accounting</h3>
-                    <img class="placeholder" src="images/placeholder.jpg" alt="placeholder">
-                    <h4 class="spotlight-head">"We'll count your numbers!</h4>
+                    <img class="placeholder" src="images/accounting.png" alt="placeholder">
+                    <h4 class="spotlight-head">We'll count your numbers!</h4>
                     <hr class="section-hr">
                     <p class="section-text">businessofAcc@gmail.com <br> (804)-555-5555</p>
                 </section>
                 <section class="spot2">
                     <h3 class="section-header">Code Ninjas</h3>
-                    <img class="placeholder" src="images/placeholder.jpg" alt="placeholder">
+                    <img class="placeholder" src="images/code.png" alt="placeholder">
                     <h4 class="spotlight-head">Teach your children how to code!</h4>
                     <hr class="section-hr">
                     <p class="section-text">codeninjas@gmail.com <br> (804)-555-5555</p>
                 </section>
                 <section class="spot3">
                     <h3 class="section-header">Chick-Fil-A</h3>
-                    <img class="placeholder" src="images/placeholder.jpg" alt="placeholder">
+                    <img class="placeholder" src="images/chick.png" alt="placeholder">
                     <h4 class="spotlight-head">Fry Chicken with us!</h4>
                     <hr class="section-hr">
                     <p class="section-text">Chick-Fil-A@gmail.com <br> (804)-555-5555</p>
@@ -97,13 +97,13 @@
             </div>
             <div class="event">
                 <h3 class="section-header">Hire Event</h3>
-                <img class="placeholder" src="images/placeholder.jpg" alt="placeholder">
+                <img class="placeholder" src="images/event.png" alt="placeholder">
                 <p class="section-text">Join us for our weekly hiring event! Starts at 1:00 p.m every Friday afternoon.</p>
             </div>
             <div class="weather">
                 <h3 class="section-header">Weather</h3>
                 <div class="weather-grid">
-                    <img id="weather-image" src="images/placeholder.jpg" alt="placeholder">
+                    <img id="weather-image" src="images/weather.png" alt="Weather logo">
                     <h2 id="temp"></h2>
                 </div>
                 <hr class="section-hr">
