--- a/week4/index.html
+++ b/week4/index.html
@@ -35,8 +35,8 @@
         <nav>
             <button id="btn">&#9776;</button>
             <ul id= "navigation">
-                <li><a href="https://www.google.com">Home</a></li>
-                <li><a href="https://www.google.com">Directory</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./discover.html">Discover</a></li>
                 <li><a href="https://www.google.com">Join</a></li>
                 <li><a href="https://www.google.com">Contact</a></li>
             </ul>
