--- a/week4/discover.html
+++ b/week4/discover.html
@@ -55,69 +55,98 @@
     <main>
         <div class="discover-grid">
             <div class="info-1">
-                <h3 class="section-header">swag header</h3>
-                <p class="section-text">Swag information...</p>
+                <h3 class="section-header">About Midlothian</h3>
+                <p class="section-text">Twenty minutes just south of the capital city of Richmond, lies the quaint town of Midlithian.<br>
+                                        A home to many families, communities, and bustling businesses, It's a great place to be able to<br>
+                                        call home. Those who live here get a taste of the simple suburban lifestyle, but don't let that fool<br>
+                                        you. There's always something to do, whether it be shopping in the more populated and touristy areas, <br>
+                                        or hunting in the more rural areas. This town has a truly good mix of everything, and is good for any<br>
+                                        kind of person! </p>
             </div>
             <div class="discover-pic-1">
                 <picture>
-                    <img src="images/accounting.png">
+                    <img class= "discover-pics" data-src="images/midlo-map.png">
                 </picture>
             </div>
             <div class="info-2">
-                <h3 class="section-header">swag header</h3>
-                <p class="section-text">Swag information...</p>
+                <h3 class="section-header">A deep history</h3>
+                <p class="section-text">Anyone living in Midlothian could tell you the cultural history of the town, because It's quite<br>
+                                        hard to miss. Along the local streets, nature hikes, and towns, coal mines can be spotted. They aren't<br>
+                                        in use anymore, but back in they day they paved the way for our great town. It all began in the 1800's,<br>
+                                        when the Woodridge family began their coal mining enterprise. The whole county of Chesterfield became<br>
+                                        a hot spot for mining. Wikipedia says "Midlothian is the site of the first commercially-mined coal in<br>
+                                        the Colony of Virginia and North America." How cool is that? </p>
             </div>
             <div class="discover-pic-2">
                 <picture>
-                    <img src="images/accounting.png">
+                    <img class="discover-pics" data-src="images/discover-oldmine.jpg">
                 </picture>
             </div>
             <div class="info-3">
-                <h3 class="section-header">swag header</h3>
-                <p class="section-text">Swag information...</p>
+                <h3 class="section-header">Size, and other information</h3>
+                <p class="section-text">The great town of Midlothian is approximately 5.48 miles wide, and is a home to 72,711 amazing people<br>
+                                        and 26,206 households. The zip codes are 23113 and 23114, and reside in Chesterfield County.<br><br>
+                                        The racial demographics are 73.3% white, 15.7% African American, 4.8% Hispanic, 3.5% Adian, 2.9% mixed<br>
+                                        races, and 0.2% Native American.<br><br></p>
             </div>
             <div class="discover-pic-3">
                 <picture>
-                    <img src="images/accounting.png">
+                    <img class="discover-pics" data-src="images/discover-scene.jpg">
                 </picture>
             </div>
             <div class="info-4">
-                <h3 class="section-header">swag header</h3>
-                <p class="section-text">Swag information...</p>
+                <h3 class="section-header">Attractions</h3>
+                <p class="section-text">Midlothian's attractions include<br>
+                        <ul>
+                            <li>Walk along the Mid-Lothian Mines park</li>
+                            <li>Swim in the lake and explore the Robious Landing park</li>
+                            <li>Play mini golf and drive-in golf at the Windy Hill Sports Complex</li>
+                            <li>Go antique shopping</li>
+                            <li>Bowl and play arcade games at Uptown Alley</li>
+                            <li>Visit historical landmarks</li>
+                        </ul>  
+                                        And much more!              
+                </p>
             </div>
             <div class="discover-pic-4">
                 <picture>
-                    <img src="images/accounting.png">
+                    <img class="discover-pics" data-src="images/discover-golf.jpg">
                 </picture>
             </div>
             <div class="info-5">
-                <h3 class="section-header">swag header</h3>
-                <p class="section-text">Swag information...</p>
+                <h3 class="section-header">What people are saying</h3>
+                <p class="section-text">Taken from niche.com, what are people saying about Midlothian?<br><br>
+                                        <strong>"Born and raised. It’s home, and it’s friendly. I’ve been happy here and I don’t see a reason<br>
+                                        to move away personally."<br><br>
+                                        "Easy access to good food, great shopping, and travel. Welcoming neighbors and an overall safe community"<br><br>
+                                        "This has been a good place to grow up. I have had good experiences with schools. My friends are all close to me.<br>
+                                        There are stores and restaurants that I like. It isn't too busy."</strong></p>
+                <p id="local-storage">hello</p>
             </div>
             <div class="discover-pic-5">
                 <picture>
-                    <img src="images/accounting.png">
+                    <img class="discover-pics" data-src="images/discover-mill.jpg">
                 </picture>
             </div>
 
             <div class="discover-pic-6">
                 <picture>
-                    <img src="images/accounting.png">
+                    <img class="discover-pics" data-src="images/discover-mine.jpg">
                 </picture>
             </div>
             <div class="discover-pic-7">
                 <picture>
-                    <img src="images/accounting.png">
+                    <img class="discover-pics" data-src="images/discover-midlohs.jpg">
                 </picture>
             </div>
             <div class="discover-pic-8">
                 <picture>
-                    <img src="images/accounting.png">
+                    <img class="discover-pics" data-src="images/discover-library.jpg">
                 </picture>
             </div>
             <div class="discover-pic-9">
                 <picture>
-                    <img src="images/accounting.png">
+                    <img class="discover-pics" data-src="images/discover-cinema.jpg">
                 </picture>
             </div>
 
@@ -153,5 +182,6 @@
     </footer>
     <script src="js/js.js"></script>
     <script src="js/windchill.js"></script>
+    <script src="js/lazyload.js"></script>
 </body>
 </html>
