--- a/week4/discover.html
+++ b/week4/discover.html
@@ -65,7 +65,7 @@
             </div>
             <div class="discover-pic-1">
                 <picture>
-                    <img class= "discover-pics" data-src="images/midlo-map.png">
+                    <img class= "discover-pics" data-src="images/midlo-map.png" alt="Map of Midlothian">
                 </picture>
             </div>
             <div class="info-2">
@@ -79,7 +79,7 @@
             </div>
             <div class="discover-pic-2">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-oldmine.jpg">
+                    <img class="discover-pics" data-src="images/discover-oldmine.jpg" alt="Old Midlothian mine">
                 </picture>
             </div>
             <div class="info-3">
@@ -91,12 +91,12 @@
             </div>
             <div class="discover-pic-3">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-scene.jpg">
+                    <img class="discover-pics" data-src="images/discover-scene.jpg" alt="Midlothian scenery">
                 </picture>
             </div>
             <div class="info-4">
                 <h3 class="section-header">Attractions</h3>
-                <p class="section-text">Midlothian's attractions include<br>
+                <p class="section-text">Midlothian's attractions include<br></p>
                         <ul>
                             <li>Walk along the Mid-Lothian Mines park</li>
                             <li>Swim in the lake and explore the Robious Landing park</li>
@@ -105,12 +105,11 @@
                             <li>Bowl and play arcade games at Uptown Alley</li>
                             <li>Visit historical landmarks</li>
                         </ul>  
-                                        And much more!              
-                </p>
+                                       <p>And much more!</p>
             </div>
             <div class="discover-pic-4">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-golf.jpg">
+                    <img class="discover-pics" data-src="images/discover-golf.jpg" alt="Windy Hill golf course">
                 </picture>
             </div>
             <div class="info-5">
@@ -125,28 +124,28 @@
             </div>
             <div class="discover-pic-5">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-mill.jpg">
+                    <img class="discover-pics" data-src="images/discover-mill.jpg" alt="Midlothian mill">
                 </picture>
             </div>
 
             <div class="discover-pic-6">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-mine.jpg">
+                    <img class="discover-pics" data-src="images/discover-mine.jpg" alt="Midlothian mine">
                 </picture>
             </div>
             <div class="discover-pic-7">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-midlohs.jpg">
+                    <img class="discover-pics" data-src="images/discover-midlohs.jpg" alt="Midlothian high school">
                 </picture>
             </div>
             <div class="discover-pic-8">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-library.jpg">
+                    <img class="discover-pics" data-src="images/discover-library.jpg"alt="Midlothian library">
                 </picture>
             </div>
             <div class="discover-pic-9">
                 <picture>
-                    <img class="discover-pics" data-src="images/discover-cinema.jpg">
+                    <img class="discover-pics" data-src="images/discover-cinema.jpg"alt="midlothian movie theater">
                 </picture>
             </div>
 
