--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li>Lesson 06: <a href="./week4/index.html" target="_blank">Responsive Design</a></li>
             <li>Lesson 07: <a href="./week4/discover.html" target="_blank">The Discover Page</a></li>
             <li>Lesson 07.5: <a href="./week7/lazyload.html" target="_blank">Progressive Loading of Images</a></li>
-            <li>Lesson 08: <a href="https://www.google.com" target="_blank">Title</a></li>
+            <li>Lesson 08.5: <a href="./week8/tablebuild.html" target="_blank">Table Build Activity</a></li>
             <li>Lesson 09: <a href="https://www.google.com" target="_blank">Title</a></li>
             <li>Lesson 10: <a href="https://www.google.com" target="_blank">Title</a></li>
             <li>Lesson 11: <a href="https://www.google.com" target="_blank">Title</a></li>
