--- a/week4/index.html
+++ b/week4/index.html
@@ -37,7 +37,7 @@
             <ul id= "navigation">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./discover.html">Discover</a></li>
-                <li><a href="https://www.google.com">Join</a></li>
+                <li><a href="./join.html">Join</a></li>
                 <li><a href="https://www.google.com">Contact</a></li>
             </ul>
         </nav>
