--- a/week4/directory.html
+++ b/week4/directory.html
@@ -37,8 +37,8 @@
             <ul id= "navigation">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./discover.html">Discover</a></li>
-                <li><a href="https://www.google.com">Join</a></li>
-                <li><a href="https://www.google.com">Contact</a></li>
+                <li><a href="./join.html">Join</a></li>
+                <li><a href="./directory.html">Directory</a></li>
             </ul>
         </nav>
         <section class="links">
@@ -56,8 +56,12 @@
     <main>
         <div class="directory-page">
         <h3>Business Directory</h3>
-
+            <button type="button" id="card-viewBTN">card view</button>
+            <button type="button" id="list-viewBTN">list view</button>
+            <div class="cards"></div>
+            <div class="lists"></div>
         </div>
+        
 
 
     </main>
@@ -86,5 +90,6 @@
     </footer>
     <script src="js/js.js"></script>
     <script src="js/windchill.js"></script>
+    <script src="js/directory.js"></script>
 </body>
 </html>
