--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li>Lesson 07.5: <a href="./week7/lazyload.html" target="_blank">Progressive Loading of Images</a></li>
             <li>Lesson 08: <a href="./week4/join.html" target="_blank">Join Page</a></li>
             <li>Lesson 08.5: <a href="./week8/tablebuild.html" target="_blank">Table Build Activity</a></li>
+            <li>Lesson 09: <a href="./week4/directory.html" target="_blank">Directory Page</a></li>
             <li>Lesson 09.5: <a href="./week9/prophets.html" target="_blank">Prophets Card Page</a></li>
             <li>Lesson 10: <a href="https://www.google.com" target="_blank">Title</a></li>
             <li>Lesson 11: <a href="https://www.google.com" target="_blank">Title</a></li>
