--- a/week4/index.html
+++ b/week4/index.html
@@ -38,7 +38,7 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./discover.html">Discover</a></li>
                 <li><a href="./join.html">Join</a></li>
-                <li><a href="https://www.google.com">Contact</a></li>
+                <li><a href="./directory.html">Directory</a></li>
             </ul>
         </nav>
         <section class="links">
