--- a/week4/thankyou.html
+++ b/week4/thankyou.html
@@ -45,8 +45,8 @@
             <ul id= "navigation">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./discover.html">Discover</a></li>
-                <li><a href="https://www.google.com">Join</a></li>
-                <li><a href="https://www.google.com">Contact</a></li>
+                <li><a href="./join.html">Join</a></li>
+                <li><a href="./directory.html">Directory</a></li>
             </ul>
         </nav>
         <section class="links">
