Fixed up mistakes

--- a/week4/discover.html
+++ b/week4/discover.html
@@ -56,11 +56,11 @@
         <div class="discover-grid">
             <div class="info-1">
                 <h3 class="section-header">About Midlothian</h3>
-                <p class="section-text">Twenty minutes just south of the capital city of Richmond, lies the quaint town of Midlithian.<br>
+                <p class="section-text">Just twenty minutes south of the capital city of Richmond, lies the quaint town of Midlothian.<br>
                                         A home to many families, communities, and bustling businesses, It's a great place to be able to<br>
                                         call home. Those who live here get a taste of the simple suburban lifestyle, but don't let that fool<br>
-                                        you. There's always something to do, whether it be shopping in the more populated and touristy areas, <br>
-                                        or hunting in the more rural areas. This town has a truly good mix of everything, and is good for any<br>
+                                        you. There's always something to do, whether it be shopping at the more populated and touristy areas, <br>
+                                        or hunting in the more rural locations. This town has a truly fantastic mix of everything, and is perfect for any<br>
                                         kind of person! </p>
             </div>
             <div class="discover-pic-1">
@@ -69,10 +69,10 @@
                 </picture>
             </div>
             <div class="info-2">
-                <h3 class="section-header">A deep history</h3>
+                <h3 class="section-header">A rich history</h3>
                 <p class="section-text">Anyone living in Midlothian could tell you the cultural history of the town, because It's quite<br>
-                                        hard to miss. Along the local streets, nature hikes, and towns, coal mines can be spotted. They aren't<br>
-                                        in use anymore, but back in they day they paved the way for our great town. It all began in the 1800's,<br>
+                                        hard to miss. Along the local streets, nature hikes, and even inside beside the schools, coal mines can be spotted. <br>They aren't
+                                        in use anymore, but long ago they once they paved the way for our great town. It all began in the 1800s,<br>
                                         when the Woodridge family began their coal mining enterprise. The whole county of Chesterfield became<br>
                                         a hot spot for mining. Wikipedia says "Midlothian is the site of the first commercially-mined coal in<br>
                                         the Colony of Virginia and North America." How cool is that? </p>
@@ -85,8 +85,8 @@
             <div class="info-3">
                 <h3 class="section-header">Size, and other information</h3>
                 <p class="section-text">The great town of Midlothian is approximately 5.48 miles wide, and is a home to 72,711 amazing people<br>
-                                        and 26,206 households. The zip codes are 23113 and 23114, and reside in Chesterfield County.<br><br>
-                                        The racial demographics are 73.3% white, 15.7% African American, 4.8% Hispanic, 3.5% Adian, 2.9% mixed<br>
+                                        and 26,206 households. The zip codes are 23113 and 23114, and it resides inside Chesterfield County.<br><br><br>
+                                        The racial demographics are 73.3% white, 15.7% African American, 4.8% Hispanic, 3.5% Asian, 2.9% mixed<br>
                                         races, and 0.2% Native American.<br><br></p>
             </div>
             <div class="discover-pic-3">
@@ -96,7 +96,7 @@
             </div>
             <div class="info-4">
                 <h3 class="section-header">Attractions</h3>
-                <p class="section-text">Midlothian's attractions include<br></p>
+                <p class="section-text">When looking for a fun time, the townspeople:<br></p>
                         <ul>
                             <li>Walk along the Mid-Lothian Mines park</li>
                             <li>Swim in the lake and explore the Robious Landing park</li>
@@ -105,7 +105,7 @@
                             <li>Bowl and play arcade games at Uptown Alley</li>
                             <li>Visit historical landmarks</li>
                         </ul>  
-                                       <p>And much more!</p>
+                                       <p>And much more!</p><br><br>
             </div>
             <div class="discover-pic-4">
                 <picture>
@@ -120,7 +120,7 @@
                                         "Easy access to good food, great shopping, and travel. Welcoming neighbors and an overall safe community"<br><br>
                                         "This has been a good place to grow up. I have had good experiences with schools. My friends are all close to me.<br>
                                         There are stores and restaurants that I like. It isn't too busy."</strong></p>
-                <p id="local-storage">hello</p>
+                <p id="local-storage"></p>
             </div>
             <div class="discover-pic-5">
                 <picture>
@@ -169,6 +169,7 @@
             <p id="name">barnum.eleanor@gmail.com</p>
             <p id="number">(804)239-8531</p>
             <a id="linko" href="https://www.google.com/">Location Map</a>
+            <a id="linko" href="./contact.html">Contact Us!</a>
         </section>
         <hr id="footer-line">
         <section id="last">
