--- a/week4/index.html
+++ b/week4/index.html
@@ -62,43 +62,52 @@
 
                 </picture>
                 <section class="title"><h1>Welcome to Midlothian!</h1></section>
+                <a href="./join.html">
                 <button id="join-btn">Join the Chamber</button>
+                </a>
             </div>
             <div class="news">
                 <h3 class="section-header">News Release</h3>
-                <p class="section-text">  hdjfbdskfbkshfidfhdskfhkdhfasfsdfksfkskfkafhkf hdkakfhkdsfhsdfhdjfbdskfbkshfidf hdskfhkdhfasfsdfksfkskfkafhkfhdkakf hkdsfhsdfhdjfbdskfbkshfidfhdskfhkdhfasfsdfksfkskfkafhkfhdkakfhkdsf hsdfhdjfbdskfbkshfidfhdskfhkdhfasfsdfksfkskfkafhkfhdk akfhkdsfhsdfhdjfbdskfbkshfidfhdskfhkdhfasfsdfksfkskfkafhk fhdkakfhkdsfhsdfhdjfbdskfbkshfidfhdskfhkdhfasfsd</p>
+                <p class="section-text"> This just in! Come grab all your latest news for the town of Midlothian, right here only! From business endeavors to 
+                    awesome events in town, this site's got it all! Be sure to check out the "Directory" tab, as well as our "Discover" page for ways you can
+                    get involved in the community.<br><br>
+                    The weather is warm, and summer is here! There are many events just around the corner that will be fun for you and the whole family! Contact us
+                    using the "Contact Us" link at the bottom of the page to learn about more opportunities to expand your business.
+                </p>
             </div>
             <div class="parent">
                 <section class="spot1">
                     <h3 class="section-header">Business of Accounting</h3>
-                    <img class="placeholder" src="images/accounting.png" alt="placeholder">
+                    <img class="placeholder" src="images/accounting.png" alt="Calculator">
                     <h4 class="spotlight-head">We'll count your numbers!</h4>
                     <hr class="section-hr">
                     <p class="section-text">businessofAcc@gmail.com <br> (804)-555-5555</p>
                 </section>
                 <section class="spot2">
                     <h3 class="section-header">Code Ninjas</h3>
-                    <img class="placeholder" src="images/code.png" alt="placeholder">
+                    <img class="placeholder" src="images/code.png" alt="Laptop">
                     <h4 class="spotlight-head">Teach your children how to code!</h4>
                     <hr class="section-hr">
                     <p class="section-text">codeninjas@gmail.com <br> (804)-555-5555</p>
                 </section>
                 <section class="spot3">
                     <h3 class="section-header">Chick-Fil-A</h3>
-                    <img class="placeholder" src="images/chick.png" alt="placeholder">
-                    <h4 class="spotlight-head">Fry Chicken with us!</h4>
+                    <img class="placeholder" src="images/chick.png" alt="Fries">
+                    <h4 class="spotlight-head">Fry chicken with the crew!</h4>
                     <hr class="section-hr">
                     <p class="section-text">Chick-Fil-A@gmail.com <br> (804)-555-5555</p>
                 </section>
             </div>
             <div class="join">
+                <a href="./join.html">
                 <button id="join-btn2"> Join Us!</button>
-                <p class="section-text">Discover how to join the chamber of commerce and how it will benefit your organization!</p>
+                </a>
+                <p class="section-text">Discover how to join our Chamber of Commerce, and learn and how it can benefit your organization! Click the button now.</p>
             </div>
             <div class="event">
                 <h3 class="section-header">Hire Event</h3>
-                <img class="placeholder" src="images/event.png" alt="placeholder">
-                <p class="section-text">Join us for our weekly hiring event! Starts at 1:00 p.m every Friday afternoon.</p>
+                <img class="placeholder" src="images/event.png" alt="Calendar">
+                <p class="section-text">Join us for our weekly hiring event! It starts at 1:00 p.m every Friday afternoon.</p>
             </div>
             <div class="weather">
                 <h3 class="section-header">Weather</h3>
@@ -107,8 +116,10 @@
                     <h2 id="temp"></h2>
                 </div>
                 <hr class="section-hr">
+                <p id="weather-cond">Condition: </p>
                 <p id="weather-p1">Wind Speed: </p>
                 <p id="weather-p2">Wind Chill: </p>
+
             </div>
         </div>
     </main>
@@ -126,6 +137,7 @@
             <p id="name">barnum.eleanor@gmail.com</p>
             <p id="number">(804)239-8531</p>
             <a id="linko" href="https://www.google.com/">Location Map</a>
+            <a id="linko" href="./contact.html">Contact Us!</a>
         </section>
         <hr id="footer-line">
         <section id="last">
@@ -134,6 +146,7 @@
         <p id="wdd">WDD 230 Project  |</p>
         <div class="lastmod"></div>
         </section>
+        
     </div>
     </footer>
     <script src="js/js.js"></script>
