--- a/week4/join.html
+++ b/week4/join.html
@@ -119,6 +119,7 @@
             <p id="name">barnum.eleanor@gmail.com</p>
             <p id="number">(804)239-8531</p>
             <a id="linko" href="https://www.google.com/">Location Map</a>
+            <a id="linko" href="./contact.html">Contact Us!</a>
         </section>
         <hr id="footer-line">
         <section id="last">
