--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li>Lesson 09: <a href="./week4/directory.html" target="_blank">Directory Page</a></li>
             <li>Lesson 09.5: <a href="./week9/prophets.html" target="_blank">Prophets Card Page</a></li>
             <li>Lesson 10: <a href="./week4/index.html" target="_blank">Using the Weather API</a></li>
-            <li>Lesson 11: <a href="https://www.google.com" target="_blank">Title</a></li>
+            <li>Lesson 11: <a href="./week4/index.html" target="_blank">Chamber of Commerce Submission</a></li>
         </ul>
         <hr>
     </section>
