--- a/week4/index.html
+++ b/week4/index.html
@@ -62,9 +62,7 @@
 
                 </picture>
                 <section class="title"><h1>Welcome to Midlothian!</h1></section>
-                <a href="./join.html">
-                <button id="join-btn">Join the Chamber</button>
-                </a>
+                <button onclick="window.location.href = 'join.html';" id="join-btn">Join the Chamber</button>
             </div>
             <div class="news">
                 <h3 class="section-header">News Release</h3>
@@ -99,9 +97,7 @@
                 </section>
             </div>
             <div class="join">
-                <a href="./join.html">
-                <button id="join-btn2"> Join Us!</button>
-                </a>
+                <button onclick="window.location.href = 'join.html';" id="join-btn2"> Join Us!</button>
                 <p class="section-text">Discover how to join our Chamber of Commerce, and learn and how it can benefit your organization! Click the button now.</p>
             </div>
             <div class="event">
@@ -136,8 +132,8 @@
         <section class="footings2">
             <p id="name">barnum.eleanor@gmail.com</p>
             <p id="number">(804)239-8531</p>
-            <a id="linko" href="https://www.google.com/">Location Map</a>
-            <a id="linko" href="./contact.html">Contact Us!</a>
+            <a class="linko" href="https://www.google.com/">Location Map</a>
+            <a class="linko" href="./contact.html">Contact Us!</a>
         </section>
         <hr id="footer-line">
         <section id="last">
